<resources>
    <string name="app_name">MobeWash</string>
    <string name="login_welcome">Welcome User</string>
    <string name="login_description">Lorem Ipsum Dolor Matel. Lorem Welcome and let’s play.</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="logo">Logo</string>
    <string name="stripe_pub_key">mock</string>
    <string name="facebook_app_id">152395371962312</string>
    <string name="fb_login_protocol_scheme">fb152395371962312</string>
    <string name="map_geo_search_input_hint">Start typing company here</string>
    <string name="map_list_header_txt">Start booking</string>

    <string-array name="country_list">
        <item>United States</item>
        <item>Australia</item>
        <item>Austria</item>
        <item>Belgium</item>
        <item>Brazil</item>
        <item>Canada</item>
        <item>Denmark</item>
        <item>Finland</item>
        <item>France</item>
        <item>Germany</item>
        <item>Hong Kong</item>
        <item>Ireland</item>
        <item>Italy</item>
        <item>Japan</item>
        <item>Luxembourg</item>
        <item>Mexico</item>
        <item>Netherlands</item>
        <item>New Zealand</item>
        <item>Norway</item>
        <item>Portugal</item>
        <item>Singapore</item>
        <item>Spain</item>
        <item>Sweden</item>
        <item>Switzerland</item>
        <item>United Kingdom</item>
    </string-array>
    <string-array name="country_code">
        <item>US</item>
        <item>AU</item>
        <item>AT</item>
        <item>BE</item>
        <item>BR</item>
        <item>CA</item>
        <item>DK</item>
        <item>FI</item>
        <item>FR</item>
        <item>DE</item>
        <item>HK</item>
        <item>IE</item>
        <item>IT</item>
        <item>JP</item>
        <item>LU</item>
        <item>MX</item>
        <item>NL</item>
        <item>NZ</item>
        <item>NO</item>
        <item>PT</item>
        <item>SG</item>
        <item>ES</item>
        <item>SE</item>
        <item>CH</item>
        <item>UK</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_landing">LandingActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="title_activity_date_time2">DateTimeActivity2</string>
</resources>