<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mobewash.mobewash.LoginFragment">

    <ImageView
        android:id="@+id/imageview_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp"
        app:srcCompat="@mipmap/ic_launcher"
        android:contentDescription="@string/logo"/>

    <TextView
        android:id="@+id/textview_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_welcome"
        android:textAppearance="@android:style/TextAppearance.Material.Large"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/imageview_logo"
        android:layout_marginTop="64dp" />

    <TextView
        android:id="@+id/textview_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textview_welcome"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:maxWidth="320dp"
        android:text="@string/login_description"
        android:textAppearance="@android:style/TextAppearance.Material.Small" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/fb_login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textview_description"
        android:layout_marginTop="64dp"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linearLayout"
        android:layout_below="@+id/fb_login_button"
        android:layout_centerHorizontal="true">

        <Button
            android:id="@+id/button_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/signup"
            android:background="@drawable/layout_rounded_corners"
            android:textColor="#ffffff"
            android:textStyle="bold"
            style="?android:attr/borderlessButtonStyle"
            android:layout_marginEnd="4dp"/>

        <Button
            android:id="@+id/button_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/login"
            android:background="@drawable/layout_rounded_corners"
            android:textColor="#ffffff"
            android:textStyle="bold"
            style="?android:attr/borderlessButtonStyle"
            android:layout_marginStart="4dp"/>
    </LinearLayout>

</RelativeLayout>
